# GClock

./: .cproject  .editorconfig  .gitignore  .project  AUTHORS  CHANGELOG  CMakeLists.txt  IMG_5210.HEIC  README.md  TODO  main.cpp  toolchain.cmake
config/: FreeRTOSConfig.h  mbconfig.h  parametres.txt
dev/: CMakeLists.txt
dev/include/: datecs.h  display.h  ds18b20.h  graphics.h  hdc1080.h  mh-z19.h  oneWireUart.h  vfd.h
dev/src/: datecs.cpp  display.c  ds18b20.c  graphics.c  hdc1080.c  mh-z19.cpp  oneWireUart.c  vfd.c
drivers/: CMakeLists.txt
drivers/include/: adc.h  board.h  clock.h  drivers.h  flash.h  gpio.h  i2c.h  key.h  pwm.h  rtc.h  spi.h  uart.h
drivers/src/: adc.c  clock.c  drivers.c  enco.c  flash.c  gpio.c  i2c.c  key.c  pwm.c  rtc.c  spi.c  uart.c
lib/CMSIS/: CMakeLists.txt
lib/CMSIS/Device/ST/STM32G0xx/Include/: stm32g041xx.h  stm32g050xx.h  stm32g051xx.h  stm32g061xx.h  stm32g070xx.h  stm32g081xx.h  stm32g0b0xx.h  stm32g0c1xx.h
lib/CMSIS/Device/ST/STM32G0xx/Source/Templates/arm/: startup_stm32g030xx.s  startup_stm32g031xx.s  startup_stm32g041xx.s  startup_stm32g050xx.s  startup_stm32g051xx.s  startup_stm32g061xx.s  startup_stm32g070xx.s  startup_stm32g071xx.s  startup_stm32g081xx.s  startup_stm32g0b0xx.s  startup_stm32g0b1xx.s  startup_stm32g0c1xx.s
lib/CMSIS/Device/ST/STM32G0xx/Source/Templates/gcc/: startup_stm32g041xx.s  startup_stm32g050xx.s  startup_stm32g051xx.s  startup_stm32g061xx.s  startup_stm32g070xx.s  startup_stm32g071xx.s  startup_stm32g081xx.s  startup_stm32g0b0xx.s  startup_stm32g0c1xx.s
lib/CMSIS/Device/ST/STM32G0xx/Source/Templates/iar/: startup_stm32g030xx.s  startup_stm32g031xx.s  startup_stm32g041xx.s  startup_stm32g050xx.s  startup_stm32g051xx.s  startup_stm32g061xx.s  startup_stm32g070xx.s  startup_stm32g071xx.s  startup_stm32g081xx.s  startup_stm32g0b0xx.s  startup_stm32g0c1xx.s
lib/bme280/: CMakeLists.txt
lib/freertos/: CMakeLists.txt
lib/minmea/: CMakeLists.txt
lib/minmea/minmea/: .project  minmea.c  minmea.h
math/: CMakeLists.txt  linearinterp.h  measurer.h  movingAverageFilter.h  specificMath.c  specificMath.h
prmsystem/include/: prmSystem.h  prmSystemCallback.h
prmsystem/src/: prmSystem.cpp  prmSystemCallback.cpp
scripts/: GClock.launch  flash.sh  gdb-client.sh  gdb-serv.sh  gdbinit  jlink.cfg  openocd-jlink.cfg  openocd-mculink.cfg  openocd-stlink.cfg  openocd.cfg
systems/: CMakeLists.txt  STM32G030F6Px_FLASH.ld  STM32G070KBTx_FLASH.ld
systems/include/: SEGGER_RTT.h  debugCore.h  printp.h  semihosting.h
systems/src/: SEGGER_RTT.c  debugCore.c  printp.c  semihosting.c  startup_stm32g030xx.c  startup_stm32g070xx.c  syscall.c  write.c
task/: CMakeLists.txt
task/include/: adcTSK.h  ds18TSK.h  sensorTSK.h  systemTSK.h
task/src/: adcTSK.cpp  ds18TSK.c  monitorTSK.c  sensorTSK.cpp  systemTSK.cpp
utils/: CMakeLists.txt
utils/include/: crc.h  hexdump.h  plog.h
utils/src/: crc.c  hexdump.c  plog.c
window/: CMakeLists.txt
window/include/: base.h  menuSystem.h
window/src/: base.cpp  font5x7.c  menuSystem.cpp  settingTSK.cpp
